load("@pigweed//pw_build:pw_cc_binary.bzl", "pw_cc_binary_with_map")
load("//targets/atsame54n20a:binary.bzl", "atsame54n20a_binary")
load("//tools/flash_cm4:flash.bzl", "flash_cm4")

package(default_visibility = ["//visibility:public"])

pw_cc_binary_with_map(
    name = "test_bench",
    srcs = ["main.cc"],
    malloc = "@pigweed//pw_malloc",
    deps = [
        "@pigweed//pw_status",
    ] + select({
        "@platforms//cpu:armv7e-m": [
            "//targets/atsame54n20a:linker_script",
            "//targets/atsame54n20a:pre_init",
            "//targets/atsame54n20a/bsp:init",
            "//targets/atsame54n20a/bsp:peripheral",
            # Resolves dependencies to lib nano (_write, _read, etc) with stubs.
            "@pigweed//pw_toolchain/arm_gcc:arm_none_eabi_gcc_support",
            "//targets/atsame54n20a/freertos_support:support",
            "@pigweed//pw_assert:backend_impl",
            "//apps/test_bench/hello_world:hello_world_thread_init",
        ],
    }),
)

atsame54n20a_binary(
    name = "test_bench.elf",
    binary = ":test_bench",
)

flash_cm4(
    name = "flash",
    binary = "test_bench.elf",
)
