load("//tools/flash_cm4:flash.bzl", "flash_cm4")
load("@pigweed//pw_build:python.bzl", "pw_py_binary")

package(default_visibility = ["//visibility:public"])

pw_py_binary(
    name = "flash",
    srcs = [
        "py/flash.py",
    ],
    main = "py/flash.py",
    deps = [
        "@pigweed//pw_system/py:pw_system_lib",
        "@rules_python//python/runfiles",
    ],
)
