load("@pigweed//pw_build:pigweed.bzl", "pw_cc_test")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "hello_world_thread_init",
    srcs = ["hello_world_thread_init.cc"],
    hdrs = ["public/hello_world/hello_world_thread_init.h"],
    includes = ["public"],
    deps = [
        ":hello_world",
        "//backends/digital_io_atsame54n20a:digital_io_instances",
        "@pigweed//pw_thread_freertos:thread",
    ],
)

cc_library(
    name = "hello_world",
    srcs = ["hello_world.cc"],
    hdrs = ["public/hello_world/hello_world.h"],
    includes = ["public"],
    deps = [
        "@pigweed//pw_digital_io",
        "@pigweed//pw_status",
        "@pigweed//pw_thread:sleep",
        "@pigweed//pw_thread:thread_core",
    ],
)

pw_cc_test(
    name = "hello_world_test",
    srcs = ["hello_world_test.cc"],
    deps = [
        ":hello_world",
        "@pigweed//pw_digital_io",
        "@pigweed//pw_digital_io:digital_io_mock",
        "@pigweed//pw_unit_test",
    ],
)
